# 7785-autonomy-stack

./: package.xml  setup.cfg  setup.py
WESUCKATCODING_object_follower/: rotate_robot.py  viewer.py
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: Track.msg
dev/: find_object.py  find_object_node.py
sigi/: DEBUGGING_GUIDE.md  README_LIDAR_LOCALIZATION.md  package.xml  setup.cfg  setup.py
sigi/launch/: navigation.launch.py
sigi/sigi/: __init__.py  camera.py  controller.py  geometry_utils.py  img_sub.py  lidar.py
sigi_interfaces/: CMakeLists.txt  package.xml
sigi_interfaces/srv/: ReadSign.srv
splatch/: DATASET_SPLIT_INFO.md  SUBMISSION_CHECKLIST.md  activate_splatch.sh  create_submission.sh  debug_pipreqs.sh  model_grader.py  quick_test.py  readme.txt  requirements.txt  split_dataset.py  test_generate_requirements.sh  test_grader2.sh  test_model_grader.sh  test_training.sh  train_mobilenetv4.py  verify_split.py
splatch/train/: labels.txt
splatch/val/: labels.txt
wesuckatcoding_object_follower/: detect.py  package.xml  rotate_robot.py  setup.py  viewer.py
wesuckatcoding_object_follower.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
wesuckatcoding_object_follower/src/: chase_object.py  img_sub.py
wesuckatcoding_object_follower/wesuckatcoding_object_follower/: detect.py  (+2 more)
wumbus/: package.xml  points.py  points_cleaned.py  setup.cfg  setup.py
wumbus_ai/: package.xml  setup.cfg  setup.py
wumbus_ai/launch/: wumbus_ai.launch.py
wumbus_ai/wumbus_ai/: ai_driver.py  motion_model.py  sign_detector.py  test_classifier.py
(+11 files in other folders)
